kubernetes/ml-cloud-tagger.yaml
apiVersion: v1
kind: Service
metadata:
  name: toxic-tagger
  labels:
    app: toxic-tagger
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: toxic-tagger
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ml-toxic-tagger
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: toxic-tagger
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
      spec:
        nodeSelector:
          app: ml-service-predictor
        terminationGracePeriodSeconds: 60
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              - labelSelector:
                matchExpressions:
              - key: app
                operator: In
                values:
                  - ml-service-predictor
        containers:
          - name: toxic-tagger
            image: jhu-cloud/toxic-tagger # our Docker container
            imagePullPolicy: Always
            resources:
              requests:
                memory: "2816Mi"
                cpu: "1000m"
            ports:
              - containerPort: 8000
            command:
              - "sh"
              - "-c"
              - "(python3 ./app-toxic-tagger.py)"
            readinessProbe:
              httpGet:
                path: /health-check
                port: 10254
                scheme: HTTP
              livenessProbe:
                httpGet:
                  path: /health-check
                  port: 10254
                  scheme: HTTP
              initialDelaySeconds: 30
              timeoutSeconds: 5
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: toxic-tagger-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: cloud-tagger.jh.io
    http:
      paths:
      - backend:
          serviceName: toxic-tagger
          servicePort: 80
        path: /
